2008-01-15  Dan Winship  <danw@gnome.org>

	* Merge libsoup-2.4 branch to trunk
	
2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-dns.c (resolve_status): Fix the logic here

2008-01-15  Dan Winship  <danw@gnome.org>

	* docs/reference/porting-2.2-2.4.xml: add a few more updates

2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-digest.c: Use GChecksum for MD5

	* libsoup/soup-md5-utils.[ch]: gone

2008-01-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (soup_server_run_async):
	(soup_server_quit): Don't ref/unref the server here. It doesn't
	match the way other things work. #494128, Mathias Hasselmann.

2008-01-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.h:
	* libsoup/soup-auth-domain-basic.h:
	* libsoup/soup-auth-domain-digest.h:
	* libsoup/soup-auth-domain.h:
	* libsoup/soup-auth.h:
	* libsoup/soup-logger.h:
	* libsoup/soup-message.h:
	* libsoup/soup-server.h:
	* libsoup/soup-session-async.h:
	* libsoup/soup-session-sync.h:
	* libsoup/soup-session.h:
	* libsoup/soup-socket.h: Add padding for future expansion to class
	structs

2008-01-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-uri.c: Add more documentation.
	(soup_uri_is_https): gone, replaced by SOUP_URI_SCHEME_HTTP /
	SOUP_URI_SCHEME_HTTPS
	(soup_uri_new): allow passing NULL to get back an "empty" SoupURI.
	(soup_uri_to_string): rename just_path to just_path_and_query, to
	avoid fooling people.
	(soup_uri_decode, soup_uri_normalize): Change these to return the
	decoded/normalized string rather than modifying it in place.
	(soup_uri_set_scheme, etc): provide setters for SoupURI parts.
	(soup_uri_set_query_from_form): set uri->query via
	soup_form_encode_urlencoded().

2008-01-14  Dan Winship  <danw@gnome.org>

	* configure.in: require glib 2.15.0, and gio

	* libsoup/soup-dns.c (soup_dns_lookup_resolve)
	(soup_dns_lookup_resolve_async): Add GCancellables, and support
	cancellation of DNS lookups.